feat: add ancre

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <a href="#co-financement">(cf) Co-finencement</a>
                             </p>
                             <p>
-                                <a href="#inter-collectivites">(ic) Inter-collectivités</a>
+                                <a href="#collectivites">(ic) Inter-collectivités</a>
                             </p>
                             <p>
                                 <a href="#coordination">(co) Coordination</a>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
 
-                    <div class="container ">
+                    <div class="container">
                         <p class="subtitle intro">Ce cadre expérimental et partenarial est notamment garanti par :</p>
                     </div>
 
@@ -152,7 +152,7 @@
 
                             <!-- CONTRAT -->
 
-                            <div class="post-it contrat">
+                            <div id="contrat" class="post-it contrat">
                                 <div class="container">
 
                                     <h3>La forme du contrat</h3>
@@ -165,7 +165,7 @@
 
                             <!-- CO-FINANCEMANT -->
 
-                            <div class="post-it co-financement">
+                            <div id="co-financement" class="post-it co-financement">
                                 <div class="container">
 
                                     <h3>Le co-financement du programme</h3>
@@ -178,7 +178,7 @@
 
                             <!-- INTER-COLLECTIVITES -->
 
-                            <div class="post-it inter-collectivites">
+                            <div id="collectivites" class="post-it inter-collectivites">
                                 <div class="container">
 
                                     <h3>La dimension inter-collectivités du programme </h3>
@@ -191,7 +191,7 @@
 
                             <!-- COORDINATION -->
 
-                            <div class="post-it coordination">
+                            <div id="coordination" class="post-it coordination">
                                 <div class="container">
 
                                     <h3>La coordination bicéphale</h3>
@@ -204,7 +204,7 @@
 
                             <!-- ADHESION -->
 
-                            <div class="post-it adhesion">
+                            <div id="adhesion" class="post-it adhesion">
                                 <div class="container">
 
                                     <h3>L’adhésion des collectivités à La 27e Région</h3>
@@ -454,16 +454,16 @@
                                 <a href="#design">(d) Design</a>
                             </p>
                             <p>
-                                <a href="#socio">(s) Sociologie</a>
+                                <a href="#sociologie">(s) Sociologie</a>
                             </p>
                             <p>
-                                <a href="#pol-urb">(pu) Politiques
+                                <a href="#politiques">(pu) Politiques
                                     Urbaines</a></p>
                             <p>
-                                <a href="#coach">(c) Coaching</a>
+                                <a href="#coaching">(c) Coaching</a>
                             </p>
                             <p>
-                                <a href="#educ-pop">(ep) Education Populaire</a>
+                                <a href="#education">(ep) Education Populaire</a>
                             </p>
                         </div>
 
@@ -509,7 +509,7 @@
 
                             <!-- DESIGN -->
 
-                            <div class="post-it design">
+                            <div id="design" class="post-it design">
                                 <div class="container">
 
                                     <h3>DESIGN</h3>
@@ -545,7 +545,7 @@
 
                             <!-- COACHING -->
 
-                            <div class="post-it coaching">
+                            <div id="coaching" class="post-it coaching">
                                 <div class="container">
 
                                     <h3>Coaching</h3>
@@ -566,7 +566,7 @@
 
                             <!-- SOCIOLOGIE -->
 
-                            <div class="post-it sociologie">
+                            <div id="sociologie" class="post-it sociologie">
                                 <div class="container">
 
                                     <h3>Sociologie</h3>
@@ -592,7 +592,7 @@
 
                             <!-- POLITIQUES URBAINES -->
 
-                            <div class="post-it politiques">
+                            <div id="politiques" class="post-it politiques">
                                 <div class="container">
 
                                     <h3>Politiques urbaines</h3>
@@ -612,7 +612,7 @@
 
                             <!-- EDUCATION POPULAIRE -->
 
-                            <div class="post-it education">
+                            <div id="education" class="post-it education">
                                 <div class="container">
 
                                     <h3>Education populaire</h3>
@@ -918,7 +918,7 @@
 
                             <!-- TRAVAIL -->
 
-                            <div class="post-it travail">
+                            <div id="travail" class="post-it travail">
                                 <div class="container">
 
                                     <h3>Les temps de travail</h3>
@@ -931,7 +931,7 @@
 
                             <!-- CO-CONSTRUCTION -->
 
-                            <div class="post-it co-financement">
+                            <div id="co-construction" class="post-it co-construction">
                                 <div class="container">
 
                                     <h3>Les temps de co-construction</h3>
@@ -944,7 +944,7 @@
 
                             <!-- PEDAGOGIE -->
 
-                            <div class="post-it pedagogie">
+                            <div id="pedagogie" class="post-it pedagogie">
                                 <div class="container">
 
                                     <h3>Les temps pédagogiques </h3>
@@ -1140,10 +1140,10 @@
 
                         <div class="legende">
                             <p>
-                                <a href="#design">(ft) Fonctionnements</a>
+                                <a href="#fonctionnements">(ft) Fonctionnements</a>
                             </p>
                             <p>
-                                <a href="#socio">(f) Focales</a>
+                                <a href="#focales">(f) Focales</a>
                             </p>
                         </div>
 
@@ -1218,7 +1218,7 @@
 
                             <!-- SUPERIEUR DIRECT -->
 
-                            <div class="post-it superieur">
+                            <div id="fonctionnements" class="post-it superieur">
                                 <div class="container">
 
                                     <h3>Différents modes de fonctionnement du groupe</h3>
@@ -1262,7 +1262,7 @@
 
                             <!-- COLLECTIF -->
 
-                            <div class="post-it collectif">
+                            <div id="focales" class="post-it collectif">
                                 <div class="container">
 
                                     <h3>Des focales différentes</h3>
@@ -1594,7 +1594,7 @@
 
                             <!-- METZ -->
 
-                            <div class="post-it metz">
+                            <div id="metz" class="post-it metz">
                                 <div class="container">
 
                                     <h3>Metz, les bureaux volants</h3>
@@ -1616,7 +1616,7 @@
 
                             <!-- LILLE -->
 
-                            <div class="post-it lille">
+                            <div id="lille" class="post-it lille">
                                 <div class="container">
 
                                     <h3>Lille, le Brico Concierge</h3>
@@ -1640,7 +1640,7 @@
 
                             <!-- MULHOUSE -->
 
-                            <div class="post-it mulhouse">
+                            <div id="mulhouse" class="post-it mulhouse">
                                 <div class="container">
 
                                     <h3>Mulhouse, les mégotiers</h3>
@@ -1663,7 +1663,7 @@
 
                             <!-- STRASBOURG -->
 
-                            <div class="post-it strasbourg">
+                            <div id="strasbourg" class="post-it strasbourg">
                                 <div class="container">
 
                                     <h3>Strasbourg, les inscriptions scolaires</h3>
@@ -1686,7 +1686,7 @@
 
                             <!-- PARIS -->
 
-                            <div class="post-it paris">
+                            <div id="paris" class="post-it paris">
                                 <div class="container">
 
                                     <h3>Paris, les pieds d’arbres</h3>
@@ -1710,7 +1710,7 @@
 
                             <!-- DUNKERQUE -->
 
-                            <div class="post-it dunkerque">
+                            <div id="dunkerque" class="post-it dunkerque">
                                 <div class="container">
 
                                     <h3>Dunkerque le Bois du fort</h3>
@@ -2058,7 +2058,7 @@
 
                             <!-- ECOSYSTEME INTERNE -->
 
-                            <div class="post-it ecosysteme">
+                            <div id="ecosysteme" class="post-it ecosysteme">
                                 <div class="container">
 
                                     <h3>En direction de l’écosystème interne</h3>
@@ -2082,7 +2082,7 @@
 
                             <!-- LES ACTEURS DU TERRITOIRE -->
 
-                            <div class="post-it acteurs">
+                            <div id="acteurs" class="post-it acteurs">
                                 <div class="container">
 
                                     <h3>Avec les acteurs du territoire</h3>
@@ -2393,7 +2393,7 @@
 
                             <!-- PROCESSUS ITÉRATIF -->
 
-                            <div class="post-it iterations">
+                            <div id="iterations" class="post-it iterations">
                                 <div class="container">
 
                                     <h3>Un processus itératif</h3>
@@ -2415,7 +2415,7 @@
 
                             <!-- IMPLIQUER LES USAGERS -->
 
-                            <div class="post-it impliquation">
+                            <div id="impliquation" class="post-it impliquation">
                                 <div class="container">
 
                                     <h3>Impliquer les futurs usagers et complices du labo dans la co-construction</h3>
@@ -2444,7 +2444,7 @@
 
                             <!-- REGION GRAND EST -->
 
-                            <div class="post-it exception">
+                            <div id="exception" class="post-it exception">
                                 <div class="container">
 
                                     <h3>Une exception à la règle</h3>
