feat: add legendes "à propos"

--- a/about.html
+++ b/about.html
@@ -64,14 +64,22 @@
 
                 <!-- ILLUSTRATIONS -->
 
-                <article class="bg general-bg" style="background-image: url(images/about/generale.png);">
-                    <div class="bg a-bg" style="background-image: url(images/about/transmission-about.png);">
-                        <div class="bg mp-bg" style="background-image: url(images/about/moissonneuse-2.png);">
-                            <div class="bg fl-bg" style="background-image: url(images/about/hautparleur-about.png);">
-                                <div class="bg cc-bg" style="background-image: url(images/cc/suspensions.png);">
-                                    <div class="bg e-bg" style="background-image: url(images/e/gps.png);">
-                                        <div class="bg ce-bg" style="background-image: url(images/ce/carcasse.png);">
-                                            <div class="bg p-bg" style="background-image: url(images/p/pedales.png);">
+                <article class="bg general-bg"
+                    style="background-image: url(images/about/cs-legendes.svg), url(images/about/generale.png);">
+                    <div class="bg a-bg"
+                        style="background-image: url(images/about/a-legendes.svg), url(images/about/transmission-about.png);">
+                        <div class="bg mp-bg"
+                            style="background-image: url(images/about/mp-legendes.svg), url(images/about/moissonneuse-2.png);">
+                            <div class="bg fl-bg"
+                                style="background-image: url(images/about/fl-legendes.svg), url(images/about/hautparleur-about.png);">
+                                <div class="bg cc-bg"
+                                    style="background-image: url(images/about/cc-legendes.svg), url(images/cc/suspensions.png);">
+                                    <div class="bg e-bg"
+                                        style="background-image: url(images/about/e-legendes.svg), url(images/e/gps.png);">
+                                        <div class="bg ce-bg"
+                                            style="background-image: url(images/about/ce-legendes.svg), url(images/ce/carcasse.png);">
+                                            <div class="bg p-bg"
+                                                style="background-image: url(images/about/p-legendes.svg), url(images/p/pedales.png);">
 
                                                 <!-- A PROPOS -->
 
@@ -89,19 +97,25 @@
                                                     </div>
                                                     <ul>
                                                         <li><strong>poser un cadre expérimental</strong> (ce)</li>
-                                                        <li><strong>passer en mode pluridisciplinaire</strong> (mp)</li>
+                                                        <li><strong>passer en mode pluridisciplinaire</strong> (mp)
+                                                        </li>
                                                         <li><strong>rythmer le programme</strong> (p)</li>
                                                         <li><strong>impliquer et former les agents</strong> (a)</li>
-                                                        <li><strong>travailler à partir de cas concrets</strong> (cc)
+                                                        <li><strong>travailler à partir de cas concrets</strong>
+                                                            (cc)
                                                         </li>
                                                         <li><strong>s’appuyer sur l'écosystème</strong> (e)</li>
-                                                        <li><strong>se projeter dans le futur labo</strong> (fl)</li>
+                                                        <li><strong>se projeter dans le futur labo</strong> (fl)
+                                                        </li>
                                                     </ul>
                                                     <div class="side space">
 
-                                                        <p>Ce site vise à expliciter ces principes et apporte un retour
-                                                            d’expérience sur leur mise en oeuvre dans les différentes
-                                                            collectivités engagées dans La Transfo. L’objectif est de
+                                                        <p>Ce site vise à expliciter ces principes et apporte un
+                                                            retour
+                                                            d’expérience sur leur mise en oeuvre dans les
+                                                            différentes
+                                                            collectivités engagées dans La Transfo. L’objectif est
+                                                            de
                                                             permettre à chacun de se réapproprier et d’ajuster ces
                                                             principes d’action à son contexte.
                                                         </p>
@@ -110,7 +124,8 @@
                                                     <div class="side definition last">
 
                                                         <p>* En informatique,<br>
-                                                            le code source est un texte qui présente les instructions
+                                                            le code source est un texte qui présente les
+                                                            instructions
                                                             composant un programme sous une forme lisible,<br>
                                                             telles qu'elles ont été écrites dans un langage de
                                                             programmation.<br>
@@ -128,6 +143,7 @@
 
                                                     </div>
                                                 </div>
+
                                             </div>
                                         </div>
                                     </div>
