feat: add marquee scroll

--- a/index.html
+++ b/index.html
@@ -57,17 +57,18 @@
 
     <main class="tabs">
 
-        <!-- 1 - CADRE EXPERIMENTAL -->
+        <!-- 0 - CADRE EXPERIMENTAL -->
 
         <section class="tab ce">
 
             <header id="section0">
 
-                <div class="header-content">
+                <div class="header-content" style="max-height: 94px;">
+                    <div class="tab-title0">
+                        <h1>Poser un cadre experimental </h1>
+                    </div>
 
-                    <h1>Poser un cadre experimental </h1>
                     <label for="rd-close" class="tab-close">FERMER</label>
-
                 </div>
 
             </header>
@@ -410,14 +411,16 @@
         </section>
 
 
-        <!-- 2 - PASSER EN MODE PLURIDISCIPLINAIRE-->
+        <!-- 1 - PASSER EN MODE PLURIDISCIPLINAIRE-->
 
         <section class="tab mp">
 
             <header id="section1">
                 <div class="header-content">
 
-                    <h1>Passer en mode pluridisciplinaire</h1>
+                    <div class="tab-title1">
+                        <h1>Passer en mode pluridisciplinaire</h1>
+                    </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
@@ -821,14 +824,15 @@
         </section>
 
 
-        <!-- 3 - RYTHMER LE PROGRAMME -->
+        <!-- 2 - RYTHMER LE PROGRAMME -->
 
         <section class="tab p">
 
             <header id="section2">
                 <div class="header-content">
-
-                    <h1>Rythmer le programme</h1>
+                    <div class="tab-title2">
+                        <h1>Rythmer le programme</h1>
+                    </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
@@ -1101,14 +1105,16 @@
         </section>
 
 
-        <!-- 4 - IMPLIQUER ET FORMER LES AGENTS -->
+        <!-- 3 - IMPLIQUER ET FORMER LES AGENTS -->
 
         <section class="tab a">
 
             <header id="section3">
                 <div class="header-content">
 
-                    <h1>Impliquer et former les agents</h1>
+                    <div class="tab-title3">
+                        <h1>Impliquer et former les agents</h1>
+                    </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
@@ -1499,14 +1505,16 @@
         </section>
 
 
-        <!-- 5 - TRAVAILLER A PARTIR DE CAS CONCRETS -->
+        <!-- 4 - TRAVAILLER A PARTIR DE CAS CONCRETS -->
 
         <section class="tab cc">
 
             <header id="section4">
                 <div class="header-content">
 
-                    <h1>Travailler a partir de cas concrets</h1>
+                    <div class="tab-title4">
+                        <h1>Travailler a partir de cas concrets</h1>
+                    </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
@@ -1955,14 +1963,16 @@
         </section>
 
 
-        <!-- 6 - S'APPUYER SUR L'ECOSYSTEME -->
+        <!-- 5 - S'APPUYER SUR L'ECOSYSTEME -->
 
         <section class="tab e">
 
             <header id="section5">
                 <div class="header-content">
 
-                    <h1>S'appuyer sur l'ecosysteme</h1>
+                    <div class="tab-title5">
+                        <h1>S'appuyer sur l'ecosysteme</h1>
+                    </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
@@ -2314,14 +2324,16 @@
         </section>
 
 
-        <!-- 7 - SE PROJECTER DANS LE FUTUR -->
+        <!-- 6 - SE PROJECTER DANS LE FUTUR -->
 
         <section class="tab fl">
 
             <header id="section6">
                 <div class="header-content">
 
-                    <h1>Se projecter dans le futur</h1>
+                    <div class="tab-title6">
+                        <h1>Se projecter dans le futur</h1>
+                    </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
