feat: correction surface scroll

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
                 <div class="header-content" style="max-height: 94px;">
                     <div class="tab-title0">
-                        <h1>Poser un cadre experimental </h1>
+                        <h1>Poser un cadre experimental <span>Poser un cadre experimental Poser un cadre
+                                experimental</span></h1>
                     </div>
 
                     <label for="rd-close" class="tab-close">FERMER</label>
@@ -419,7 +420,7 @@
                 <div class="header-content">
 
                     <div class="tab-title1">
-                        <h1>Passer en mode pluridisciplinaire</h1>
+                        <h1>Passer en mode pluridisciplinaire <span>Passer en mode pluridisciplinaire</span></h1>
                     </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
@@ -831,7 +832,7 @@
             <header id="section2">
                 <div class="header-content">
                     <div class="tab-title2">
-                        <h1>Rythmer le programme</h1>
+                        <h1>Rythmer le programme <span>Rythmer le programme Rythmer le programme</span></h1>
                     </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
@@ -1113,7 +1114,7 @@
                 <div class="header-content">
 
                     <div class="tab-title3">
-                        <h1>Impliquer et former les agents</h1>
+                        <h1>Impliquer et former les agents <span>Impliquer et former les agents</span></h1>
                     </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
@@ -1513,7 +1514,7 @@
                 <div class="header-content">
 
                     <div class="tab-title4">
-                        <h1>Travailler a partir de cas concrets</h1>
+                        <h1>Travailler a partir de cas concrets <span>Travailler a partir de cas concrets</span></h1>
                     </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
@@ -1971,7 +1972,8 @@
                 <div class="header-content">
 
                     <div class="tab-title5">
-                        <h1>S'appuyer sur l'ecosysteme</h1>
+                        <h1>S'appuyer sur l'ecosysteme <span>S'appuyer sur l'ecosysteme S'appuyer sur
+                                l'ecosysteme</span></h1>
                     </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
@@ -2332,7 +2334,8 @@
                 <div class="header-content">
 
                     <div class="tab-title6">
-                        <h1>Se projecter dans le futur</h1>
+                        <h1>Se projecter dans le futur <span>Se projecter dans le futur Se projecter dans le
+                                futur</span></h1>
                     </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
