feat: switch <marquee> to .marquee

--- a/index.html
+++ b/index.html
@@ -65,8 +65,18 @@
 
                 <div class="header-content" style="max-height: 94px;">
                     <div class="tab-title0">
-                        <h1>Poser un cadre experimental <span>Poser un cadre experimental Poser un cadre
-                                experimental</span></h1>
+
+                        <div class="marquee-content">
+                            <div class="h1">
+                                <span class="fixed">Poser un cadre experimental</span>
+                                <span>Poser un cadre experimental</span>
+                                <span>Poser un cadre experimental</span>
+                                <span>Poser un cadre experimental</span>
+                                <span>Poser un cadre experimental</span>
+                                <span>Poser un cadre experimental</span>
+                            </div>
+                        </div>
+
                     </div>
 
                     <label for="rd-close" class="tab-close">FERMER</label>
@@ -420,8 +430,19 @@
                 <div class="header-content">
 
                     <div class="tab-title1">
-                        <h1>Passer en mode pluridisciplinaire <span>Passer en mode pluridisciplinaire</span></h1>
+
+                        <div class="marquee-content">
+                            <div class="h1">
+                                <span class="fixed">Passer en mode pluridisciplinaire</span>
+                                <span>Passer en mode pluridisciplinaire</span>
+                                <span>Passer en mode pluridisciplinaire</span>
+                                <span>Passer en mode pluridisciplinaire</span>
+                                <span>Passer en mode pluridisciplinaire</span>
+                            </div>
+                        </div>
+
                     </div>
+
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
@@ -831,8 +852,22 @@
 
             <header id="section2">
                 <div class="header-content">
+
                     <div class="tab-title2">
-                        <h1>Rythmer le programme <span>Rythmer le programme Rythmer le programme</span></h1>
+
+                        <div class="marquee-content">
+                            <div class="h1">
+                                <span class="fixed">Rythmer le programme</span>
+                                <span>Rythmer le programme</span>
+                                <span>Rythmer le programme</span>
+                                <span>Rythmer le programme</span>
+                                <span>Rythmer le programme</span>
+                                <span>Rythmer le programme</span>
+                                <span>Rythmer le programme</span>
+                                <span>Rythmer le programme</span>
+                            </div>
+                        </div>
+
                     </div>
                     <label for="rd-close" class="tab-close">FERMER</label>
 
@@ -1114,8 +1149,19 @@
                 <div class="header-content">
 
                     <div class="tab-title3">
-                        <h1>Impliquer et former les agents <span>Impliquer et former les agents</span></h1>
+
+                        <div class="marquee-content">
+                            <div class="h1">
+                                <span class="fixed">Impliquer et former les agents</span>
+                                <span>Impliquer et former les agents</span>
+                                <span>Impliquer et former les agents</span>
+                                <span>Impliquer et former les agents</span>
+                                <span>Impliquer et former les agents</span>
+                            </div>
+                        </div>
+
                     </div>
+
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
@@ -1514,8 +1560,19 @@
                 <div class="header-content">
 
                     <div class="tab-title4">
-                        <h1>Travailler a partir de cas concrets <span>Travailler a partir de cas concrets</span></h1>
+
+                        <div class="marquee-content">
+                            <div class="h1">
+                                <span class="fixed">Travailler a partir de cas concrets</span>
+                                <span>Travailler a partir de cas concrets</span>
+                                <span>Travailler a partir de cas concrets</span>
+                                <span>Travailler a partir de cas concrets</span>
+                                <span>Travailler a partir de cas concrets</span>
+                            </div>
+                        </div>
+
                     </div>
+
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
@@ -1972,9 +2029,20 @@
                 <div class="header-content">
 
                     <div class="tab-title5">
-                        <h1>S'appuyer sur l'ecosysteme <span>S'appuyer sur l'ecosysteme S'appuyer sur
-                                l'ecosysteme</span></h1>
+
+                        <div class="marquee-content">
+                            <div class="h1">
+                                <span class="fixed">S'appuyer sur l'ecosysteme</span>
+                                <span>S'appuyer sur l'ecosysteme</span>
+                                <span>S'appuyer sur l'ecosysteme</span>
+                                <span>S'appuyer sur l'ecosysteme</span>
+                                <span>S'appuyer sur l'ecosysteme</span>
+                                <span>S'appuyer sur l'ecosysteme</span>
+                            </div>
+                        </div>
+
                     </div>
+
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
@@ -2334,9 +2402,20 @@
                 <div class="header-content">
 
                     <div class="tab-title6">
-                        <h1>Se projecter dans le futur <span>Se projecter dans le futur Se projecter dans le
-                                futur</span></h1>
+
+                        <div class="marquee-content">
+                            <div class="h1">
+                                <span class="fixed">Se projecter dans le futur</span>
+                                <span>Se projecter dans le futur</span>
+                                <span>Se projecter dans le futur</span>
+                                <span>Se projecter dans le futur</span>
+                                <span>Se projecter dans le futur</span>
+                                <span>Se projecter dans le futur</span>
+                            </div>
+                        </div>
+
                     </div>
+
                     <label for="rd-close" class="tab-close">FERMER</label>
 
                 </div>
