--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <header id="section0">
 
-                <div class="header-content" style="max-height: 94px;">
+                <div class="header-content">
                     <div class="tab-title0">
 
                         <div class="marquee-content">
