feat: suppr elements

--- a/index.html
+++ b/index.html
@@ -2439,7 +2439,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/fl/fl-legendes.svg), url(images/fl/hautparleur-3.png);">
+                        style="background-image:  url(images/fl/fl-legendes.svg), url(images/fl/hautparleur.png);">
 
                         <div class="mini-img" style="background-image: url(images/fl/hautparleur-min.png);">
                             <p>Fig.cs</p>
