feat: add responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <title>La Transfo • Code Source</title>
     <link rel="icon" type="image/png" href="images/favicon-2.png" />
@@ -370,10 +371,13 @@
                             <!-- <p>04 MAI 2020</p>
                             <p>( No Model ) N°. 002.006</p> -->
                             <p>STÉPHANE VINCENT</p>
-                            <p>( délégué général de La 27e Région )</p>
+                            <p>( délégué général )</p>
                         </div>
 
                     </div>
+
+                    <p class="intro">Stéphane Vincent, délégué général de la 27ème region.
+                    </p>
 
                     <div class="links-box"
                         style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
