feat: responsive accordion

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
         <!-- INFO BAND -->
 
-        <div class="information">
-            <div class="container">
+        <div class="information marquee-info">
+            <div class="container marquee-info-content">
 
-                <p>Open sourcer le protocole de montage de cellules d’innovations expérimenter dans sept
-                    collectivités territoriales entre 2016 et 2020 lors du programme Transfo.
+                <p class="info-content">Open sourcer le protocole de montage de cellules d’innovations expérimenter dans
+                    sept collectivités territoriales entre 2016 et 2020 lors du programme Transfo.
                 </p>
 
             </div>
