feat: responsive title-box

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
                     </div>
 
-                    <p class="intro">Stéphane Vincent, délégué général de la 27ème region.
+                    <p class="intro"><strong>Stéphane Vincent</strong>, délégué général de la 27ème region.
                     </p>
 
                     <div class="links-box"
@@ -793,9 +793,10 @@
 
                     </div>
 
-                    <p class="intro">Mireille Diestchy (sociologue, chercheuse associée à l’université de Strasbourg et
-                        enseignante à l’In Situ Lab et à l’Ecole Nationale Supérieure d’architecture de Strasbourg) et
-                        Chloë Dupuy (designer, co-fondatrice des Ateliers RTT), résidentes de La Transfo à Strasbourg.
+                    <p class="intro"><strong>Mireille Diestchy</strong> (sociologue, chercheuse associée à l’université
+                        de Strasbourg et enseignante à l’In Situ Lab et à l’Ecole Nationale Supérieure d’architecture de
+                        Strasbourg) et <strong>Chloë Dupuy</strong> (designer, co-fondatrice des Ateliers RTT),
+                        résidentes de La Transfo à Strasbourg.
                     </p>
 
                     <!-- AUDIO -->
@@ -1475,13 +1476,13 @@
                             <!-- <p>04 MAI 2020</p>
                             <p>( No Model ) N°. 002.006</p> -->
                             <p>SÉBASTIEN HOUSSIN</p>
-                            <p>( Interview )</p>
+                            <p>( coordinateur du labo )</p>
                         </div>
 
                     </div>
 
-                    <p class="intro">Interview Sébastien Houssin, coordinateur du labo d’innovation de la ville et
-                        communauté d’agglomération de Mulhouse
+                    <p class="intro">Interview <strong>Sébastien Houssin</strong>, coordinateur du labo d’innovation de
+                        la ville et communauté d’agglomération de Mulhouse
                     </p>
 
                     <!-- AUDIO -->
@@ -1980,9 +1981,10 @@
 
                     </div>
 
-                    <p class="intro">Entretien avec les porteuses de cas de l’Eurométropole de Strasbourg : Anna Hihn
-                        (Service éducatif et culturel des musées), Céline Tergau (Direction de l’enfance et de
-                        l’éducation), Yolaine Soares (Accueil à la population) :
+                    <p class="intro">Entretien avec les porteuses de cas de l’Eurométropole de Strasbourg :
+                        <strong>Anna Hihn</strong> (Service éducatif et culturel des musées),
+                        <strong>Céline Tergau</strong> (Direction de l’enfance et de l’éducation),
+                        <strong>Yolaine Soares</strong> (Accueil à la population) :
                     </p>
 
                     <!-- VDEO -->
@@ -2348,8 +2350,8 @@
 
                     </div>
 
-                    <p class="intro">Entretien avec Silvère Mercier, coordinateur de la Transfo et chargé de mission du
-                        nouveau labo.
+                    <p class="intro">Entretien avec <strong>Silvère Mercier</strong>, coordinateur de la Transfo et
+                        chargé de mission du nouveau labo.
                     </p>
 
                     <!-- AUDIO -->
@@ -2713,7 +2715,7 @@
 
                     </div>
 
-                    <p class="intro">Pierre Roger, coordinateur du bureau du labo de Dunkerque </p>
+                    <p class="intro"><strong>Pierre Roger</strong>, coordinateur du bureau du labo de Dunkerque </p>
 
                     <!-- AUDIO -->
 
